--- a/psr.tex
+++ b/psr.tex
@@ -272,7 +272,7 @@ This result will enable us to state conclusively if the GC excess is given by a 
 Finally, since we demonstrated that our criteria is vey efficient in selecting PSR-like sources we are confident that we will provide PSR candidates list that could be used as targets of future radio follow for the search of radio pulsation. This will increase significantly the number of $\gamma$-ray PSRs detected by the LAT in the next few years.
 
 
-{\bf Budget}: Given the substantial data analysis effort, we request one year funding to support for the PI ($\sim 30\%$), for two conferences per year and publication charges. Including overheads we request a budget of 55k\$. Co-Is Di Mauro and Charles, will be directly in charge of the analysis, while co-Is Digel and Wood will provide both technical and the scientific input.
+{\bf Budget}: Given the substantial data analysis effort, we request one year funding to support for the PI ($\sim 30\%$), for two conferences per year and publication charges. Including overheads we request a budget of 55k\$. Co-Is Di Mauro, Rodd, Sharma, Safdi, Bartels, will be directly in charge of the analysis, while co-Is Charles, Hooper, Slatyer and Linden will provide both technical and the scientific input.
 
 
 
